fix form_input icon not showing as active when datepicker is displaying

--- a/resources/sass/datepicker.sass
+++ b/resources/sass/datepicker.sass
@@ -159,3 +159,6 @@
   width: 350px
   height: 260px
   box-shadow: none
+
+.datepicker.datepicker-active ~ .icon
+  color: $input-icon-active-color
